--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,23 +15,17 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "types": [
-      "jasmine"
-    ],
+    "types": ["jasmine"],
     "baseUrl": "./src",
     "paths": {
-      "@app/*": [
-        "app/*"
-      ],
-      "@components/*": [
-        "app/components/*"
-      ]
-    },
-    "angularCompilerOptions": {
-      "enableI18nLegacyMessageIdFormat": false,
-      "strictInjectionParameters": true,
-      "strictInputAccessModifiers": true,
-      "strictTemplates": true
+      "@app/*": ["app/*"],
+      "@components/*": ["app/components/*"]
     }
+  },
+  "angularCompilerOptions": {  // ✅ Moved outside `compilerOptions`
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   }
 }
